--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -25,7 +25,7 @@
     top: 0;
     left: -1000px;
     z-index: 999;
-    width: 280px;
+    width: auto;
     height: 100vh;
     background: #fefefe;
     transition: 0.2s;
@@ -57,6 +57,7 @@
     padding: 10px 15px;
     border-radius: 5px;
     color: black;
+    font-size: 1.2rem;
   }
 
   /* Adjust navigation list styles */
@@ -103,6 +104,14 @@
   .container {
     width: 100%;
   } */
+  nav ul li:hover > .submenu {
+    display: none;
+  }
+}
+@media only screen and (max-width: 390px) {
+  nav ul li a {
+    font-size: 0.75rem;
+  }
 }
 
 /* Media Query for Screens up to 600px */
