--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,21 +97,22 @@ nav ul li a {
   margin: 0 5px;
   border-radius: 5px;
   font-family: "Lato", sans-serif;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: bold;
 }
 nav ul li a:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  color: var(--theme);
+  color: var(--dark);
+  transform: scale(1.1);
 }
 @media only screen and (max-width: 1410px) {
   nav ul li a {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 }
 @media only screen and (max-width: 1330px) {
   nav ul li a {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 }
 @media only screen and (max-width: 1100px) {
@@ -119,12 +120,13 @@ nav ul li a:hover {
     padding: 8px 8px;
     transition: 0.2s;
     margin: 0 3px;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
   }
 }
 
 nav ul li a.active {
-  color: var(--theme);
+  color: var(--dark);
+  text-shadow: #0000004e 0px 0px 1px;
 }
 .hamburger {
   display: none;
@@ -143,13 +145,21 @@ nav ul li a.active {
 .submenu {
   position: absolute;
   flex-direction: column;
-  width: 300px;
+  width: auto;
   background-color: var(--dark);
-  padding: 10px 0;
-  opacity: 0;
+  padding: 10px 20px;
   z-index: -999;
-  transition: opacity 0.5s, margin-top 2s;
-  top: -500px;
+  display: none;
+  top: 100%;
+}
+.submenu li {
+  margin: 5px 0;
+}
+.submenu li {
+  color: var(--light);
+}
+.submenu li:hover a {
+  color: var(--light);
 }
 .scrolled nav ul li ul li a {
   color: var(--dark);
@@ -160,18 +170,15 @@ nav ul li a.active {
 .scrolled nav ul li ul li a:hover {
   color: var(--theme);
 }
+.scrolled nav ul li a.active {
+  color: var(--theme);
+}
 
 nav ul li:hover > .submenu {
-  opacity: 1;
+  display: block;
   z-index: 1;
   margin-top: 0;
   top: 50px;
-  transition: opacity 0.5s, margin-top 2s;
-}
-
-nav ul li:active > .submenu {
-  opacity: 0;
-  margin-top: -200px;
 }
 
 /* Hero Section Styles */
@@ -221,13 +228,14 @@ nav ul li:active > .submenu {
 }
 
 .other-hero .heading-description {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: auto;
   width: 70%;
   color: #cecece;
   text-align: center;
-  letter-spacing: 1px;
-
+  letter-spacing: 2px;
+  border-radius: 5px;
+  text-shadow: #000000 0px 0px 5px;
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
 }
@@ -313,6 +321,11 @@ nav ul li:active > .submenu {
   margin-top: 50px;
 }
 /* Media Queries */
+@media only screen and (max-width: 1500px) {
+  .intro-img img {
+    height: 300px;
+  }
+}
 @media only screen and (max-width: 1350px) {
   .intro-img img {
     height: 250px;
@@ -369,6 +382,7 @@ nav ul li:active > .submenu {
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  cursor: pointer;
 }
 .card .card-img img {
   max-width: 100%;
