--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -27,11 +27,10 @@
     z-index: 999;
     width: auto;
     height: 100vh;
+    opacity: 0;
     background: #fefefe;
-    transition: 0.2s;
     box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.05);
   }
-
   /* Show navigation when the checkbox is checked */
   #nav_check:checked ~ nav {
     left: 0;
