--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,7 +35,15 @@ body {
   overflow-x: hidden !important;
   width: 100%;
 }
-
+/* .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99;
+} */
 /* Utility classes */
 /* .h-100vh {
   height: 100vh;
@@ -341,7 +349,8 @@ nav ul li:hover > .submenu {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  padding: 50px 0;
 }
 
 .intro-container {
@@ -376,9 +385,10 @@ nav ul li:hover > .submenu {
   display: flex;
 }
 .intro-img img {
+  max-width: 60%;
   height: 350px;
   border-radius: 10px;
-  object-fit: contain;
+  object-fit: cover;
   transition: 0.5s;
   filter: grayscale(100%);
 }
@@ -432,7 +442,7 @@ nav ul li:hover > .submenu {
     padding: 10px 25px;
   }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .intro-container {
     flex-direction: column;
   }
@@ -1169,6 +1179,12 @@ h2.contact-us:hover {
     height: 80vh;
   }
 }
+@media (max-width: 420px) {
+  .tab .sudo-description {
+    font-size: 1.5rem;
+  }
+}
+
 /* Trip Planner */
 .planner-container {
   margin: 10px auto;
@@ -2085,19 +2101,175 @@ div .planner-item-description {
   margin-bottom: 30px;
 }
 .tour-description .tour-description-title {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  width: fit-content;
+  margin: auto;
   font-weight: 700;
   letter-spacing: 1px;
-  font-family: "Averia Serif Libre", cursive !important;
+  font-family: "Averia Serif Libre", cursive;
+  margin-bottom: 15px;
+  margin-top: 30px;
+  text-align: center;
+  padding: 15px 50px;
+  border-bottom: 5px solid var(--theme);
+}
+.tour-description .tour-description-title svg {
+  font-size: 3rem;
+  translate: 0 10px;
+}
+.tour-description .tour-description-text {
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  font-family: "Averia Serif Libre", cursive;
+  margin-bottom: 15px;
+  margin-top: 30px;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 1100px) {
+  .tour-description-wrapper img.tour-description-image {
+    width: 80%;
+  }
+  .tour-description {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .tour-description {
+    width: 85%;
+  }
+  .tour-description .tour-description-title {
+    font-size: 1.5rem;
+    padding: 15px 30px;
+  }
+  .tour-description .tour-description-title svg {
+    font-size: 1.5rem;
+    translate: 0 5px;
+  }
+  .tour-description .tour-description-text {
+    font-size: 1rem;
+  }
+}
+
+/* Tour Descriptions */
+
+.descriptions-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.descriptions-wrapper .description {
+  width: 65%;
+  height: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.descriptions-wrapper .description .description-title {
+  font-size: 2.5rem;
+  width: fit-content;
+  margin: auto;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-family: "Averia Serif Libre", cursive;
+  margin-bottom: 15px;
+  text-align: center;
+  padding: 15px 50px;
+  border-bottom: 5px solid var(--theme);
+}
+.descriptions-wrapper .description .description-text {
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  font-family: "Averia Serif Libre", cursive;
   margin-bottom: 15px;
   margin-top: 30px;
   text-align: center;
 }
-.tour-description .tour-description-text {
+/* Accordion */
+
+.accordion-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.accordion {
+  width: 45%;
+}
+
+.accordion li {
+  list-style: none;
+  width: 100%;
+  padding: 10px;
+  margin: 15px 0;
+  border-radius: 10px;
+  background-color: var(--light);
+  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
+    -6px -6px 10px -1px rgba(255, 255, 255, 0.2);
+}
+.accordion li label {
+  display: flex;
+  align-items: center;
+  padding: 10px;
   font-size: 1.2rem;
+  font-weight: 500;
   letter-spacing: 1px;
-  font-family: "Averia Serif Libre", cursive !important;
-  margin-bottom: 15px;
-  margin-top: 30px;
-  text-align: center;
+  font-family: "Averia Serif Libre", cursive;
+  cursor: pointer;
+}
+
+.accordion li label::before {
+  content: "+";
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+input[type="radio"] {
+  display: none;
+}
+.accordion .content {
+  color: var(--dark-light);
+  padding: 0 10px;
+  line-height: 26px;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.2s ease-in;
+}
+.accordion input[type="radio"]:checked + label + .content {
+  max-height: 400px;
+  padding: 10px 10px 20px;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 1200px) {
+  .accordion {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .accordion {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .accordion {
+    width: 85%;
+  }
+  .descriptions-wrapper .description {
+    width: 85%;
+  }
+  .descriptions-wrapper .description .description-title {
+    font-size: 1.5rem;
+    padding: 15px 30px;
+  }
 }
